# humanizer

./: .gitignore  README.md  README_humanizer_framework.md  humanizer_framework.py  humanizer_reference.json  pyproject.toml
backend/: app.py
backend/api/: routes.py
config/: model_config.json
docs/: example_workflow.md  framework.md
frontend/: index.html  package.json
frontend/src/: App.tsx
frontend/src/components/: ConversionPanel.tsx  ExampleTrainer.tsx  RuleTrace.tsx  ScoreCard.tsx  SettingsPanel.tsx  TextEditor.tsx
frontend/src/styles/: globals.css
src/humanizer_lab/: __init__.py  ai_client.py  analyzer.py  cli.py  converter.py  models.py  prompts.py  rule_bank.py  rule_extractor.py  scorer.py  storage.py
tests/: test_ai_client.py  test_analyzer.py  test_config_loading.py  test_converter.py  test_rule_bank.py  test_rule_extractor.py
