[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "humanizer-lab"
version = "0.1.0"
description = "Transparent AI-to-human text humanization framework"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.29",
  "pydantic>=2.6",
  "httpx>=0.27",
  "python-multipart>=0.0.9"
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-mock>=3.14"]

[project.scripts]
add-example = "humanizer_lab.cli:cmd_add_example"
analyze-pair = "humanizer_lab.cli:cmd_analyze_pair"
humanize = "humanizer_lab.cli:cmd_humanize"
score = "humanizer_lab.cli:cmd_score"
export-prompt = "humanizer_lab.cli:cmd_export_prompt"

[tool.setuptools.packages.find]
where = ["src"]
